# chatapp

backend/: Cargo.toml  Deploy.toml  Rocket.toml
backend/:database.db/: 000016.sst  000036.sst  MANIFEST-000013  MANIFEST-000040
backend/database.db/: 000127.sst  000135.sst  000143.sst  000151.sst  000159.sst  IDENTITY  LOG.old.1733670041224770  MANIFEST-000155
backend/sql/functions/: auth.surql  friend.surql  icon.surql  message.surql  server.surql  user.surql
backend/sql/schema/: new-connection-2024-12-02.surql
backend/src/: auth.rs  config.rs  database.rs  error.rs  main.rs  messenger.rs  servers.rs  user.rs
backend/src/chatsync/: listener.rs  mod.rs
backend/src/features/: memelicense.rs
frontend/: Cargo.toml  index.html  styles.css
frontend/src/: main.rs
frontend/src/components/: button.rs  chat.rs  incidents.rs  login.rs  meme_license.rs  navbar.rs  selector.rs  serverlist.rs  signup.rs
frontend/src/hooks/: theme.rs  websocket.rs
frontend/style/: form.css
