[package]
name = "chatapp-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json", "secrets", "tls"] }
rocket_ws = "0.1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
surrealdb = "2.1.2"
chrono = "0.4.38"
rand = "0.8.5"
sha2 = "0.10.8"
